@@ -1,8 +1,6 @@
 package com.example.backend.service;
 
-import com.example.backend.api.board.dto.BoardCommentCreateRequest;
-import com.example.backend.api.board.dto.BoardCommentResponse;
-import com.example.backend.api.board.dto.BoardCommentUpdateRequest;
+import com.example.backend.api.board.dto.*;
 import com.example.backend.common.ApiException;
 import com.example.backend.domain.board.Board;
 import com.example.backend.domain.board.BoardComment;
@@ -14,7 +12,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,19 +35,53 @@ public class BoardCommentService {
         User writer = userRepository.findById(userId)
                 .orElseThrow(() -> ApiException.unauthorized("로그인이 필요합니다."));
 
-        BoardComment saved = boardCommentRepository.save(BoardComment.create(board, writer, content));
+        Long parentId = request.parentCommentId();
+
+        BoardComment saved;
+
+        if (parentId == null) {
+            saved = boardCommentRepository.save(BoardComment.create(board, writer, content));
+        } else {
+            BoardComment parent = boardCommentRepository.findByIdAndDeletedAtIsNull(parentId)
+                    .orElseThrow(() -> ApiException.notFound("부모 댓글이 존재하지 않습니다."));
+
+            if (!Objects.equals(parent.getBoard().getId(), boardId)) {
+                throw ApiException.badRequest("부모 댓글이 해당 게시글에 속하지 않습니다.");
+            }
+
+            if (parent.isReply()) {
+                throw ApiException.badRequest("대댓글에는 답글을 달 수 없습니다. (1 depth 제한)");
+            }
+
+            saved = boardCommentRepository.save(BoardComment.reply(board, writer, parent, content));
+        }
+
         return saved.getId();
     }
 
     @Transactional(readOnly = true)
-    public List<BoardCommentResponse> getComments(Long boardId) {
+    public List<BoardCommentThreadResponse> getComments(Long boardId) {
         boardRepository.findByIdAndDeletedAtIsNull(boardId)
                 .orElseThrow(() -> ApiException.notFound("삭제되었거나 존재하지 않는 게시글입니다."));
 
-        return boardCommentRepository.findByBoard_IdAndDeletedAtIsNullOrderByCreatedAtAsc(boardId)
-                .stream()
-                .map(BoardCommentResponse::from)
-                .toList();
+        List<BoardComment> all = boardCommentRepository.findByBoard_IdAndDeletedAtIsNullOrderByCreatedAtAsc(boardId);
+
+        // parentId 기준으로 그룹핑
+        Map<Long, List<BoardComment>> byParentId = all.stream()
+                .filter(c -> c.getParentComment() != null)
+                .collect(Collectors.groupingBy(c -> c.getParentComment().getId(), LinkedHashMap::new, Collectors.toList()));
+
+        // 최상위(부모 없는 댓글)만 뽑아서 replies 붙여서 반환
+        List<BoardCommentThreadResponse> result = new ArrayList<>();
+        for (BoardComment c : all) {
+            if (c.getParentComment() != null) continue; // 최상위만
+            List<BoardComment> replies = byParentId.getOrDefault(c.getId(), List.of());
+            result.add(new BoardCommentThreadResponse(
+                    BoardCommentResponse.from(c),
+                    replies.stream().map(BoardCommentResponse::from).toList()
+            ));
+        }
+        return result;
     }
 
     @Transactional
@@ -75,6 +108,13 @@ public class BoardCommentService {
 
         if (!comment.getWriter().getUserId().equals(userId)) {
             throw ApiException.forbidden("작성자만 삭제할 수 있습니다.");
+        }
+
+        if (!comment.isReply()) {
+            List<BoardComment> replies = boardCommentRepository.findByParentComment_IdAndDeletedAtIsNullOrderByCreatedAtAsc(comment.getId());
+            for (BoardComment r : replies) {
+                r.softDelete();
+            }
         }
 
         comment.softDelete();
